[metadata]
name = pesapy
version = 0.0.1
author = David Mutune
author_email = davidmutune200@gmail.com
description = Python Mpesa API wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kimengu-david/mpesa_py
project_urls =
    Bug Tracker = https://github.com/kimengu-david/mpesa_py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    requests
    pycryptodome
    python-decouple
    python-dotenv
    wheel
python_requires = >=3.6

[options.packages.find]
where = src